<resources>
    <string name="app_name">VitaVault</string>
    <string name="register">Register</string>
    <string name="login">LOGIN</string>
    <string name="enter_email_hint">Enter your email</string>
    <string name="password">Password</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
    <string name="home">Home</string>
    <string name="report">Report</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="symptoms">Symptoms</string>
    <string name="add_symptom">➕ Add Symptom</string>
    <string name="list_symptoms">📜 List Symptoms</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="vitals">Vitals</string>
    <string name="ocr">OCR</string>
    <string name="dietary">Dietary</string>
    <string name="medications">Medications</string>
    <string name="list">List</string>
    <string name="trends">Trends</string>
    <string name="back_button">Back</string>
    <string name="Headache">Headache</string>
    <string name="Coughing">Coughing</string>
    <string name="Nausea">Nausea</string>
    <string name="Other">Other</string>
    <string name="Rash">Rash</string>
    <string name="Chest_Pain">Chest Pain</string>
    <string name="Sore_Throat">Sore Throat</string>
    <string name="Joint_Pain">Joint Pain</string>
    <string name="HeartRate">Heart Rate</string>
    <string name="BloodPressure">Blood Pressure</string>
    <string name="BodyTemperature">Body Temperature</string>
    <string name="Weight">Weight</string>
    <string name="taken">Taken</string>
    <string name="missed">Missed</string>
    <string name="medication_reminder">Medication Reminder</string>
    <string name="medication_icon">medication icon</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Sun">Sun</string>
    <string name="SelectAlarmTime">Select Alarm Time</string>
    <string name="NoTimeSelected">No time selected</string>
    <string name="SaveAlarm">SAVE ALARM</string>
    <string name="medicationName">Medication Name</string>
    <string name="addMedicationFirst">Need to add medication first to enable alarms</string>
    <string name="addAlarm">Add Alarm</string>
    <string name="Unit">Unit</string>
    <string name="selectDay">Select Day</string>
    <string name="dietaryRestrictionsTitle">Dietary Restrictions</string>
    <string name="SearchSymptoms">Search Symptoms</string>
    <string name="ExportData">Export Data</string>
    <string name="Feedback">We Appreciate your feedback</string>

    <string-array name="gender_array">
        <item>Select option</item>
        <item>Male</item>
        <item>Female</item>
        <item>Non-Binary</item>
        <item>Not Listed</item>
        <item>Prefer not to answer</item>
    </string-array>
    <string-array name="age_array">
        <item>Select option</item>
        <item>18-24</item>
        <item>25-34</item>
        <item>35-44</item>
        <item>45-54</item>
        <item>55-64</item>
        <item>65+</item>
    </string-array>


    <string-array name="symptom_types">
        <item>All Symptoms</item>
        <item>Headache</item>
        <item>Coughing</item>
        <item>Rash</item>
        <item>Chest Pain</item>
        <item>Sore Throat</item>
        <item>Join Pain</item>
        <item>Other</item>
    </string-array>

    <string name="add_log">add log</string>
    <string name="log">Log</string>
    <string name="alarms">Alarms</string>
    <string name="no_logs_available">No logs available.</string>
    <string name="no_alarms_set">No alarms set.</string>
    <string name="mute_alarm">Mute Alarm</string>
    <string name="time">Time</string>
    <string name="status">Status</string>
    <string name="please_select_a_status">Please select a status</string>
    <!--<string name="scanResultDescription">⚠️ Restricted ingredients are flagged automatically.\nTap the ➕ icon to add items to your restricted list</string>
    -->
    <string name="scanResultDescription"> Restricted ingredients are flagged automatically.</string>
    <string name="scanResultDescription2"> Tap this icon to add items to your restricted list</string>
    <string name="scanResultDescription3"> ❗Do NOT rely on these results for severe allergies or intolerances❗</string>


    <string name="scanMainActivityDescription">📸 Option 1: Snap a clear photo of ingredients.\n📤 Option 2: Upload an image from your device.\n✂️ Then, tight crop on text for best results.</string>
    <string name="cameraControlsDescription">Tap here to start the camera preview\n\nTap again when an image is displayed to clear it</string>

    <string name="forgot_password"><u>Forgot Password </u></string>

    <string name="Q1">1. Can VitaVault provide advice on medical conditions or treatments?</string>
    <string name="A1">No, VitaVault is designed solely to help you track and manage your health information. It does not offer medical advice, diagnoses, or treatment recommendations. For any health-related concerns or decisions, please consult a qualified healthcare professional.</string>

    <string name="Q2">2. Does VitaVault integrate with wearable devices?</string>
    <string name="A2">Currently, VitaVault does not directly integrate with wearable devices.</string>

    <string name="Q3">3. What is OCR and how can this feature help me?</string>
    <string name="A3">OCR stands for Optical Character Recognition. This feature allows you to extract ingredient information from product images, typically ingredient lists. VitaVault can then compare these ingredients with your dietary restrictions to help you identify potential allergens or ingredients to avoid.</string>

    <string name="Q4">4. Is my symptom data secure and private?</string>
    <string name="A4">Absolutely! We use Firebase, a secure and reliable platform, to store your data. All your information is encrypted, and only you have access to your symptom records. Your privacy is our top priority.</string>

    <string name="Q5">5. Can I use the same account on multiple devices?</string>
    <string name="A5">Yes, you can! Simply log in to your account on any device using your email and password. Your data will sync automatically, so you can access your symptom records from anywhere.</string>

    <string name="Q6">6. Can I track symptoms for someone else, like a family member?</string>
    <string name="A6">Currently, the app is designed for individual use. If you want to track symptoms for someone else, they will need to create their own account. However, we are exploring family accounts for future updates!</string>



</resources>