<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vitavault_page_background3"
    android:orientation="vertical"
    tools:context=".view.AddLogActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:background="@drawable/glow_white"
            android:src="@drawable/ic_medical_record"/>

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="Add Log" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:paddingTop="20dp">

            <!-- Date -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dynamic_background"
                    android:focusable="false"
                    android:inputType="date"
                    android:textColor="@color/black"
                    android:paddingVertical="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/errorDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="error message"
                android:textColor="@color/error"
                android:textSize="15sp"
                android:textStyle="italic"
                android:visibility="gone" />

            <!-- Time -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/time"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/startTimeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dynamic_background"
                    android:focusable="false"
                    android:inputType="time"
                    android:paddingVertical="8dp"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/errorTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="error message"
                android:textColor="@color/error"
                android:textSize="15sp"
                android:textStyle="italic"
                android:visibility="gone" />

            <!-- Status -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/status"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:paddingRight="12dp">

                <RadioButton
                    android:id="@+id/radioTaken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taken"
                    android:paddingRight="12dp"/>

                <RadioButton
                    android:id="@+id/radioMissed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/missed"
                    android:paddingRight="12dp"/>
                <RadioButton
                    android:id="@+id/radioDismissed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dismissed"
                    android:visibility="gone"/>
            </RadioGroup>

            <TextView
                android:id="@+id/errorStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_select_a_status"
                android:textColor="@color/error"
                android:textSize="15sp"
                android:textStyle="italic"
                android:visibility="gone" />
            <!-- General Error -->
            <TextView
                android:id="@+id/errorGeneral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="error message"
                android:textColor="@color/error"
                android:textSize="15sp"
                android:textStyle="italic"
                android:visibility="gone" />

            <!-- Save Button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_secondary"
                android:text="@string/save"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
